Upgrade project to Java 11