@@ -7,11 +7,6 @@
   <version>0.1-SNAPSHOT</version>
   <name>fiz-oai-provider</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-
 
   <dependencies>
     <dependency>
@@ -93,6 +88,22 @@
       <version>2.23.4</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.4.0-b180725.0427</version>
+    </dependency>
+    <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.4.0-b180725.0644</version>
+    </dependency>
 
   </dependencies>
 
@@ -111,11 +122,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
+        <version>2.22.0</version>
         <configuration>
           <excludes>
             <exclude>de.fiz_karlsruhe.integration.*</exclude>
           </excludes>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
         </configuration>
       </plugin>
 
@@ -135,6 +149,9 @@
           <includes>
             <include>de.fiz_karlsruhe.integration.*IT.java</include>
           </includes>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
         </configuration>
       </plugin>
 
@@ -170,7 +187,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.11.v20180605</version>
+        <version>9.4.19.v20190610</version>
         <configuration>
           <httpConnector>
             <port>8999</port>
@@ -200,6 +217,14 @@
         </executions>
       </plugin>
 
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <release>11</release>
+          </configuration>
+      </plugin>
 
 
     </plugins>
